Updated content and footer section

--- a/Components/content.html
+++ b/Components/content.html
@@ -1,5 +1,10 @@
 <html>
 <body bgcolor="green">
-    
+    <br><br><br><br><br>
+    <h2 align="center">
+    <b><P>
+        Welcome to Loyola Institute of Science and Technology<br><br>
+        Feel free to browse our site
+    </P></b></h2>
 </body>
 </html>
