--- a/Components/footer.html
+++ b/Components/footer.html
@@ -1,7 +1,9 @@
 <html>
 <body bgcolor="blue">
-    <h1 align="center">Copyright © 2023 LIST. All Rights Reserved.</h1>
-    <p>Loyola Campus Nungambakkam,<br />
+    <div align="center">
+        <h2>Copyright © 2023 LIST. All Rights Reserved.</h2>
+        <p>Loyola Campus Nungambakkam,<br />
         Chennai – 600034.</p>
+    </div>
 </body>
 </html>
