--- a/Components/menu.html
+++ b/Components/menu.html
@@ -5,7 +5,7 @@
     <br /><br />
     <button type="button"><a href="login.html" target=content><font color="black">Student Login</font></a></li></button>
     <br /><br />
-    <button type="button"><a href="grievance.html" target=content><font color="black">Grievance Form</font></a></li></button>
+    <button type="button"><a href="newAccount.html" target=content><font color="black">New Account</font></a></li></button>
     <br /><br />
     <button type="button"><a href="contact.html" target=content><font color="black">Contact Us</font></a></li></button>
     <br /><br />
