--- a/Components/profile.html
+++ b/Components/profile.html
@@ -1,5 +1,12 @@
 <html>
+    <head>
+        <style type="text/css">
+            .myprofile  { text-align: center; }
+        </style>
+    </head>
     <body><br><br><br>
-        <h2 id="myprofile" align="center">My Dashboard</h1>
+        <div class="myprofile">
+            <h2>My Dashboard</h1>
+        </div>
     </body>
 </html>
