--- a/Components/login.html
+++ b/Components/login.html
@@ -15,6 +15,11 @@
                     alert("Invalid Input: Please enter a valid email address!");
                     return false;
                 }
+                if(String(document.myform.pwd.value).length < 8)
+                {
+                    alert("Invalid Input: Password must have minimum 8 characters!");
+                    return false;
+                }
                 alert("Logged In Successfully");
                 return true;
             }
@@ -22,12 +27,13 @@
         <form name="myform" action="profile.html" onsubmit="return validate()" method="post">
             <div align="center">
                 Enter your LIST Email ID: <input type="text" name="email"><br> <br>
-                Enter your Password : <input type="password" name="pwd"><br><br>
+                Enter your Password (min 8 characters): <input type="password" name="pwd"><br><br>
             </div>
             <br><br>
             <div align="center">
             <input type="submit" value="Submit">&nbsp;&nbsp;&nbsp;&nbsp;
             <input type="reset" value="clear" >
+            </div>
         </form>
     </body>
 </html>
