Removed home page and updated newAccount

--- a/Components/menu.html
+++ b/Components/menu.html
@@ -1,7 +1,7 @@
 <html>
 <body bgcolor="yellow">
 <form align="center">
-    <button type="button"><a href="home.html" target=content><font color="black">Home Page</font></a></li></button>
+    <button type="button"><a href="content.html" target=content><font color="black">Home Page</font></a></li></button>
     <br /><br />
     <button type="button"><a href="login.html" target=content><font color="black">Student Login</font></a></li></button>
     <br /><br />
