--- a/Components/newAccount.html
+++ b/Components/newAccount.html
@@ -27,6 +27,8 @@
                     alert("Invalid input: Please enter a valid phone number!")
                     return false;
                 }
+                alert("Congratulations! Your LIST account is created successfully. Log in to see your new dashboard!");
+                return true;
             }
         </script>
         <form name="createform" action="login.html" onsubmit="return validate()" method="post">
