--- a/Components/visit.html
+++ b/Components/visit.html
@@ -22,7 +22,7 @@
         </div>
         <br>
         <p></p>
-        <form name="visitform" action="visit.html" onsubmit="return validate()" method="post">
+        <form name="visitform" action="content.html" onsubmit="return validate()" method="post">
             <div align="center">
                 <h3>Payment Form</h3>
                 <h4>Contact details</h4>
