Added some styles

--- a/Components/footer.html
+++ b/Components/footer.html
@@ -1,9 +1,20 @@
 <html>
-<body bgcolor="blue">
-    <div align="center">
-        <h2>Copyright © 2023 LIST. All Rights Reserved.</h2>
-        <p>Loyola Campus Nungambakkam,<br />
-        Chennai – 600034.</p>
+    <head>
+        <style>
+            body { background-color: #2f2e87; }
+            div { 
+                color:#f6ebb4;
+                font-size: medium;
+                display: block;
+                width:100%;
+                text-align:center;
+            }
+        </style>
+    </head>
+<body>
+    <div>
+        <p>Copyright © 2023 LIST. All Rights Reserved.</p> 
+        <p>Designed and Developed with 🧡 by Fathima Zulaikha</p>
     </div>
 </body>
 </html>
