--- a/Components/header.html
+++ b/Components/header.html
@@ -1,5 +1,37 @@
 <html>
-<body bgcolor="red">
-    <h1 align="center"><b>Loyola Institute of Science and Technology</b></h1>
+<head>
+    <style type="text/css" >
+        body { margin: 0%; }
+        .navbar { background-color: #2f2e87; }
+        #logo { height: 90px; width: 155px; padding: 20px 10px 0px 30px; display: inline-block; margin-right:250px;}
+        .navMenu { 
+            color:#f6ebb4; 
+            font-size: x-large; 
+            display:inline-block; 
+            margin-left: 0px;
+            margin-right:50px; 
+            padding-bottom: 20px;
+        }
+    </style>
+</head>
+<body>
+    <div class="navbar">
+        <a href="index.html"><img id="logo" src="..\Ex2_CSS\logo2.jpg" alt="LIST logo" ></a>
+        <a href="#">
+            <p class="navMenu">Home</p>
+        </a>
+        <a href="#">
+            <p class="navMenu">Academics</p>
+        </a>
+        <a href="#">
+            <P class="navMenu">Placements</P>
+        </a>
+        <a href="#">
+            <p class="navMenu">Campus Infrastructure</p>
+        </a>
+        <a href="#">
+            <p class="navMenu">Student Life</p>
+        </a>
+    </div>
 </body.>
 </html>
